--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment</title>
+    <title>Assignment4</title>
 </head>
 <body>
-   <h1>For html page</h1> 
+   <h1>Html page added</h1> 
 </body>
 </html>
